--- a/calc.html
+++ b/calc.html
@@ -17,6 +17,6 @@
       <button class="equals" data-k="=">=</button>
     </div>
   </main>
-  <script src="script.js"></script>
+  <script src="calc.js"></script>
 </body>
 </html>
